--- a/README
+++ b/README
@@ -70,7 +70,7 @@ SETUP
     This will depend on your shell, but here are a few:
 
      - ksh (~/.profile or ~/.kshrc):
-        export PS1='\h:`spwd`\p '
+        export PS1='\h:`prwd`\p '
 
      - bash
      - zsh
