--- a/prwd.1
+++ b/prwd.1
@@ -87,15 +87,9 @@ as possible, you can use this setting:
     the path is trimmed with 'maxlength'.
 
 .Sh SETUP
-    This will depend on your shell, but here are a few:
+    This will depend on your shell, but the following will usually do:
 
-     - ksh (~/.profile or ~/.kshrc):
         export PS1='\\h:`prwd`\\p '
-
-     - bash
-     - zsh
-     - csh
-     - tcsh
 
     Note that the single quote matters since you want to keep the command
     within the variable as-is (unresolved).
