--- a/README
+++ b/README
@@ -67,15 +67,9 @@ INSTALL
     sudo make install
 
 SETUP
-    This will depend on your shell, but here are a few:
+    This will depend on your shell, but in general the following will do:
 
-     - ksh (~/.profile or ~/.kshrc):
         export PS1='\h:`prwd`\p '
-
-     - bash
-     - zsh
-     - csh
-     - tcsh
 
     Note that the single quote matters since you want to keep the command
     within the variable as-is (unresolved).
