- fixed typo in prwd.1, thanks to Franck Labadille.

--- a/prwd.1
+++ b/prwd.1
@@ -28,7 +28,7 @@ The
 utility prints the absolute pathname of the current working directory to
 the standard output. It is similar to
 .Nm pwd
-but has a configuration file (~/.pwdrc) allowing the following features:
+but has a configuration file (~/.prwdrc) allowing the following features:
 
      - aliases
      - max length and filler characters
