Updated man page

--- a/README
+++ b/README
@@ -105,8 +105,8 @@ TODO
     Not crash if the current directory does not exist.
 
 AUTHORS/LICENSE
-    prwd was written by Bertrand Janin <tamentis@neopulsar.org> and is
-    distributed under an ISC license (BSD compatible, OSI compatible).
+    prwd was written by Bertrand Janin <b@grun.gy> and is distributed under an
+    ISC license (BSD compatible, OSI compatible).
 
     A bunch of utility functions are borrowed from OpenBSD and OpenSSH, both
     under ISC and BSD licenses, with copyrights from the following authors:
