Added git/hg to the feature listing

--- a/prwd.1
+++ b/prwd.1
@@ -33,6 +33,7 @@ but has a configuration file (~/.prwdrc) allowing the following features:
      - aliases
      - max length and filler characters
      - newsgroup style
+     - mercurial and git branches
 
 The reasoning behind
 .Mm
