--- a/README
+++ b/README
@@ -7,6 +7,7 @@ INTRO
      - aliases
      - max length and filler characters
      - newsgroup style
+     - mercurial and git branches
 
     All of this is driven by your ~/.prwdrc file.
 
