--- a/prwd.1
+++ b/prwd.1
@@ -14,50 +14,54 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 6 2009 $
-.Dt PWD 1
+.Dd $Mdocdate: May 4 2013 $
+.Dt PRWD 1
 .Os
 .Sh NAME
 .Nm prwd
-.Nd return reduced working directory name
+.Nd print reduced working directory
 .Sh SYNOPSIS
 .Nm prwd
 .Sh DESCRIPTION
-The
 .Nm
-utility prints the absolute pathname of the current working directory to
-the standard output. It is similar to
+prints the absolute pathname of the current working directory to the standard
+output. It is similar to
 .Nm pwd
 but has a configuration file (~/.prwdrc) allowing the following features:
-
-     - aliases
-     - max length and filler characters
-     - newsgroup style
-     - mercurial and git branches
-
-The reasoning behind
-.Mm
-is that most shells read $PS1 differently and
-have a very rigid way to display the current working directory.
+.Pp
+  - aliases
+  - max length and filler characters
+  - newsgroup style
+  - mercurial and git branches
+.Pp
+Most shells read $PS1 differently and have a very rigid way to display the
+current working directory.
 .Nm
 allows you to have one way to handle the display of your working directory
-and use it across multiple shells. 
-
+and use it across multiple shells. It also has awareness of a few version
+control system (git and mercurial) and will display the current branch
+when you enter a project under version control.
+.Pp
 The syntax of the configuration files is described below, lines starting
 with '#' are ignored.
-
 .Sh ALIASES
 Defines a replacement name for a long path, for example, if you had the
 following line in your prwdrc:
-
+.Pp
     alias *prwd /home/tamentis/projects/prwd
-
+.Pp
 Then if you are in "/home/tamentis/projects/prwd/doc/html/", prwd would
 return "*prwd/doc/html". If you have spaces in your directories, you can
 wrap your 'alias' parameters with double quotes:
-
+.Pp
     alias winDocs "/mnt/Windows XP/My Documents/"
-
+.Pp
+You can define multiple values for a single alias, this allows you to share
+your configuration on different machines, but keep the same alias, for
+example:
+.Pp
+    alias $tp /home/tamentis/truveris/projects
+    alias $tp /Users/tamentis/truveris/projects
 .Sh MAX LENGTH
 Defines the maximum length to return, the default filler string is "...",
 the default length is 32, a value of 0 will disable the feature all
@@ -65,19 +69,19 @@ together.
 .Bd -literal -offset indent
 set maxlength 20
 .Ed
-
+.Pp
 This setting would turn "~/projects/prwd/doc/html" into a shorter string:
 "...cts/prwd/doc/html". You can define the filler string with the 'filler'
 variable:
 .Bd -literal -offset indent
 set filler "-"
 .Ed
-
+.Pp
 Or if your font/terminal/shell supports UTF:
 .Bd -literal -offset indent
 set filler "…"
 .Ed
-
+.Pp
 If you want
 .Nm
 to keep complete path elements instead of cutting as much
@@ -85,18 +89,16 @@ as possible, you can use this setting:
 .Bd -literal -offset indent
 set cleancut on
 .Ed
-
 .Sh NEWSGROUP STYLE
 This will shorten the path by only displaying the first letter of each path
 components, toggle it with:
 .Bd -literal -offset indent
 set newsgroup on
 .Ed
-
+.Pp
 This will turn the "/home/tamentis/projects/prwd/src/nowhere" path into
 "/h/t/p/s/nowhere". Note that the newsgroup style filter is applied before
 the path is trimmed with 'maxlength'.
-
 .Sh MERCURIAL
 You can see the currently selected branch as a prefix to your path
 whenever you are in a mercurial repository, enable this feature with
@@ -104,9 +106,8 @@ the following option:
 .Bd -literal -offset indent
 set mercurial on
 .Ed
-
+.Pp
 The resulting path will be "my-branch:project/folder".
-
 .Sh GIT
 You can see the currently HEAD position as a prefix to your path when you
 are in a git repository, you can enable this feature with the following
@@ -114,38 +115,32 @@ option:
 .Bd -literal -offset indent
 set git on
 .Ed
-
+.Pp
 The resulting path will be "my-branch:project/folder" if you are located on
 the HEAD of a branch, it will be "59cefd9...:project/folder" if you are
 anywhere else.
-
-
 .Sh SETUP
 This will depend on your shell, but the following will usually do:
 .Bd -literal -offset indent
 export PS1='\\h:`prwd`\\p '
 .Ed
-
+.Pp
 Note that the single quote matters since you want to keep the command
 within the variable as-is (unresolved).
-
 .Sh SEE ALSO
 .Xr pwd 1 ,
 .Xr csh 1 ,
 .Xr ksh 1 ,
 .Xr sh 1 ,
 .Xr getcwd 3
-.Sh BUGS
-None so far.
 .Sh AUTHORS
 prwd was written by Bertrand Janin <b@grun.gy> and is distributed under an ISC
 license (BSD compatible, OSI compatible).
-
+.Pp
 A bunch of utility functions are borrowed from OpenBSD and OpenSSH, both
 under ISC and BSD licenses, with copyrights from the following authors:
-
-    Copyright (c) 2004 Ted Unangst and Todd Miller
-    Copyright (c) 1998 Todd C. Miller <Todd.Miller@courtesan.com>
-    Copyright (c) 2000 Markus Friedl.  All rights reserved.
-    Copyright (c) 2005,2006 Damien Miller.  All rights reserved.
-
+.Pp
+ Copyright (c) 2004 Ted Unangst and Todd Miller
+ Copyright (c) 1998 Todd C. Miller <Todd.Miller@courtesan.com>
+ Copyright (c) 2000 Markus Friedl.  All rights reserved.
+ Copyright (c) 2005,2006 Damien Miller.  All rights reserved.
