fix email; remove rcs tag lines

--- a/README
+++ b/README
@@ -110,7 +110,7 @@ SEE ALSO
      pwd(1), csh(1), ksh(1), sh(1), getcwd(3)
 
 AUTHORS
-     prwd was written by Bertrand Janin <b@grun.gy> and is distributed under
+     prwd was written by Bertrand Janin <b@janin.com> and is distributed under
      an ISC license (BSD compatible, OSI compatible).
 
      A bunch of utility functions are borrowed from OpenBSD and OpenSSH, both
