--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-1.6 Bertrand Janin <b@grun.gy> (2013-05-04)
+1.7 Bertrand Janin <b@janin.com> (....-..-..)
+
+	* Added -a flag that prints all the aliases starting with '$' in a
+	  format that could be passed to eval with eval `prwd -a`. Allowing
+	  aliases to be used with other tools via shell variables.
+
+1.6 Bertrand Janin <b@janin.com> (2013-05-04)
 
 	* Fixed segfault in directories that got removed or got their
 	  permissions changed.
