--- a/README
+++ b/README
@@ -5,18 +5,24 @@ NAME
      prwd — print reduced working directory
 
 SYNOPSIS
-     prwd [−Vh]
+     prwd [−aVh]
 
 DESCRIPTION
      prwd prints the absolute pathname of the current working directory to the
      standard output. It is similar to pwd but has a configuration file
-     (~/.prwdrc) allowing the following features:
+     (~/.prwdrc) allowing a number of ways to shorten your current path. The
+     command‐line options are as follows:
 
-       ‐ aliases
-       ‐ max length and filler characters
-       ‐ newsgroup style
-       ‐ mercurial and git branches
+     −V      Show current version.
 
+     −h      Show usage.
+
+     −a      Outputs all the aliases starting with ’$’ as shell variable
+	     exports. The output from this command is meant to be used with
+	     eval in your .profile file, see section ALIAS VARIABLES for more
+	     detailed information.
+
+REASONING
      Most shells read $PS1 differently and have a very rigid way to display
      the current working directory.  prwd allows you to have one way to handle
      the display of your working directory and use it across multiple shells.
@@ -24,27 +30,27 @@ DESCRIPTION
      and will display the current branch when you enter a project under ver‐
      sion control.
 
-     The syntax of the configuration files is described below, lines starting
-     with ’#’ are ignored.
+     The keywords available in the configuration are described in the sections
+     below. Lines starting with ’#’ are ignored.
 
 ALIASES
      Defines a replacement name for a long path, for example, if you had the
      following line in your prwdrc:
 
-	 alias *prwd /home/tamentis/projects/prwd
+	   alias *prwd /home/tamentis/projects/prwd
 
      Then if you are in "/home/tamentis/projects/prwd/doc/html/", prwd would
      return "*prwd/doc/html". If you have spaces in your directories, you can
      wrap your ’alias’ parameters with double quotes:
 
-	 alias winDocs "/mnt/Windows XP/My Documents/"
+	   alias winDocs "/mnt/Windows XP/My Documents/"
 
      You can define multiple values for a single alias, this allows you to
      share your configuration on different machines, but keep the same alias,
      for example:
 
-	 alias $tp /home/tamentis/truveris/projects
-	 alias $tp /Users/tamentis/truveris/projects
+	   alias $tp /home/tamentis/truveris/projects
+	   alias $tp /Users/tamentis/truveris/projects
 
 MAX LENGTH
      Defines the maximum length to return, the default filler string is "...",
@@ -98,6 +104,19 @@ GIT
      on the HEAD of a branch, it will be "59cefd9...:project/folder" if you
      are anywhere else.
 
+ALIAS VARIABLES
+     Since you already define your aliases in your prwdrc file, you might want
+     to use them in your shell without having to redefine them somewhere else.
+     If you prefix your aliases with a ’$’ and add the following line to your
+     .profile, you will be able to do exactlt that:
+
+	   eval ‘prwd ‐a‘
+
+     You can then use your aliases in your shell using the variable name, for
+     example:
+
+	   cd $py3k
+
 SETUP
      This will depend on your shell, but the following will usually do:
 
@@ -121,4 +140,4 @@ AUTHORS
       Copyright (c) 2000 Markus Friedl.  All rights reserved.
       Copyright (c) 2005,2006 Damien Miller.  All rights reserved.
 
-BSD				  May 4, 2013				   BSD
+BSD				  May 9, 2013				   BSD
