--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.7 Bertrand Janin <b@janin.com> (....-..-..)
+1.7 Bertrand Janin <b@janin.com> (2013-05-25)
 
 	* Added -a flag that prints all the aliases starting with '$' in a
 	  format that could be passed to eval with eval `prwd -a`. Allowing
