--- a/TODO
+++ b/TODO
@@ -8,3 +8,6 @@
      set hostname on
 
    which prefixes the output with hostname:
+
+ - When there are multiple definitions of the same alias, check which ones
+   point to an existing directory. If multiple do, use the last one.
