Added functions to test file existance.

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
      alias $new $tp/new
 
  - When there are multiple definitions of the same alias, check which ones
-   point to an existing directory. If multiple do, use the last one.
+   point to an existing directory. That's for '-a'.
 
  - Make sure the return from getenv("PWD") and getcwd() is the same before
    using for former.
