--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* If the parent shell allows it, use PWD to get the current directory,
 	  this allows prwd to grab the context of the parent shell and show
 	  symlinks appropriately.
+	* Where there are multiple definitions of the same alias, check which
+	  ones point to an existing directory (for -a dump). Resolve aliases
+	  one level deep if needed.
 
 1.7 Bertrand Janin <b@janin.com> (2013-05-25)
 
