--- a/README
+++ b/README
@@ -31,14 +31,13 @@ REASONING
      below. Lines starting with '#' are ignored.
 
 ALIASES
-     Defines a replacement name for a long path, for example, if you had the
-     following line in your prwdrc:
+     Defines a short name for a lengthy path, e.g.:
 
            alias *prwd /home/tamentis/projects/prwd
 
-     Then if you are in "/home/tamentis/projects/prwd/doc/html/", prwd would
-     return "*prwd/doc/html". If you have spaces in your directories, you can
-     wrap your 'alias' parameters with double quotes:
+     If you are in "/home/tamentis/projects/prwd/doc/html/", prwd would return
+     "*prwd/doc/html". If you have spaces in your directories, you can wrap
+     your 'alias' parameters with double quotes:
 
            alias winDocs "/mnt/Windows XP/My Documents/"
 
@@ -48,6 +47,11 @@ ALIASES
 
            alias $tp /home/tamentis/truveris/projects
            alias $tp /Users/tamentis/truveris/projects
+     Aliases can be nested one level deep if you have a complicated directory
+     hierarchy.
+
+           alias $tp /home/tamentis/truveris/projects
+           alias $constants $tp/pytruveris/truveris/constants/
 
 MAX LENGTH
      Defines the maximum length to return, the default filler string is "...",
