--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
 FOR 2.0
+ - make sure we're consistent with using err() when it's abnormal and output
+   string when it could be a user configuration error or environment error.
+ - rename FILLER_LEN to MAX_FILLER_LEN
+ - Allow the configuration to be overridden by command-line flags.
+ - Document the fact that the configuration can be specified on the commandline.
+ - implement the color command  ${color #121212}.
  - deprecate the prompt settings in the config file and instead, if no template
    is specified, construct one from the existing flags.
  - document "~" as a default alias.
@@ -11,7 +17,6 @@ FOR 2.0
  - Convert the man pages to mandoc?
  - Load all the environment variables starting with '/' and resolving to
    existing path as aliases.
- - Allow the configuration to be overridden by command-line flags.
  - Properly escape the exports in dump_alias_vars in order to work with space
    folders.
  - Allow for a fully templated PS1, e.g.
@@ -35,5 +40,6 @@ FOR 2.0
     - in a source control repo?
     - by path?
     - date/time?
+    - uname/os? (emoji?)
 
    These could be defined similarly to Host lines in ssh_config.
