--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 FOR 2.0
  - make sure we're consistent with using err() when it's abnormal and output
    string when it could be a user configuration error or environment error.
+ - add ${time...}
  - rename FILLER_LEN to MAX_FILLER_LEN
  - Allow the configuration to be overridden by command-line flags.
  - Document the fact that the configuration can be specified on the commandline.
