--- a/TODO
+++ b/TODO
@@ -1,20 +1,97 @@
 FOR 1.9
- - Split prwd and prwdrc configuration man pages.
- - Convert the man pages to mandoc?
+    - Allow for a fully templated PS1, e.g.
+
+        {hostname}:{prefixed_path}{uid_indicator}
+
+        - format should be flexible for users to type any crap and add any
+          unicode nonsense they feel like adding.
+
+        - we could consider opt-based functions:
+       
+            [${time %H:%M:%s}] ${hostname -s}:${path --newsgroup}${uid}
+
+        - we're gonna need to accept fork-exec() in some fashion, even if it is
+          bound to be abused.
+     
+            ${exec whoami}
+      
+      The command+options style looks like executable commands, I'm almost
+      tempted to add some form of namespacing to make it extra obvious that the
+      commands are internal. For example:
+
+        {i:hostname -s}:{i:path newsgroup}
+
+      While accepting external commands:
+
+        {i:hostname -s}:{x:ls -l}
+
+      Since these commands are essentially just command line arguments, there
+      is value in allowing the user to call them from the command line as well:
+
+        prwd hostname -s
+
+      Would it be better to keep it to a single command format?
+
+        prwd hostname-short
+        prwd path-newsgroupize
+
+      While the simplicity is appealing, it makes it difficult to do something
+      like a date format:
+
+        prwd date VS prwd time %Y-%m-%s
+
+      What would I prefer to use:
+
+        [{time}] {hostname -s}:{path -n}{uid}
+
+      What I will have to use:
+
+        [${time}] ${hostname -s}:${path -n}${uid}
+        -or-
+        [{time}] ${hostname -s}:${path -n}${uid}
+
+ - Split prwd and prwdrc configuration man pages and turn README into a proper
+   githubesque thing.
+
+ - Allow the configuration to be overridden by command-line flags.
+
  - Load all the environment variables starting with '/' and resolving to
    existing path as aliases.
- - Allow the configuration to be overridden by command-line flags.
+
  - Properly escape the exports in dump_alias_vars in order to work with space
    folders.
- - Allow for a fully templated PS1, e.g.
-
- 	{hostname}:{prefixed_path}{uid_indicator}
 
  - Maybe even better, multiple templates conditionally, conditions could be:
 
     - UID? username?
-    - in a source control repo?
-    - by path?
-    - date/time?
+    - in a source control repo
+    - path
+    - date/time
+    - hostname
 
-   Not sure if the conditions should be handled by prwd or externally.
+   Not sure if the conditions should be handled by prwd or externally. This is an
+   example configuration:
+
+	if (hostname == "lab") {
+		template = "{foo}:{bar}"
+	}
+
+   And another, based on context:
+
+   	Context AtWork
+		Hostname lab
+		Domain truveris
+		Template {foo}:{bar}
+
+   Another:
+
+   	(
+		hostname = lab
+
+ - Advantages of prwd to document properly:
+    - a single fork instead of fork-exec git and hg.
+    - small in-stack memory footprint
+    - compiled and fast
+    - same prompt on all systems
+
+vim: expandtab ts=4 sw=4
