--- a/prwd.1
+++ b/prwd.1
@@ -23,14 +23,10 @@
 .Op Fl aVh
 .Sh DESCRIPTION
 .Nm
-prints the absolute pathname of the current working directory to the standard
-output. It is similar to
-.Nm pwd
-but has command-line flags and a configuration file (~/.prwdrc) giving you the
-option to shorten your displayed path in a number of ways and add more
-informative bits of information (git branch, uid, etc.). This is particularly
-useful if you plan to have a consistent and informative shell prompt (e.g. PS1)
-across multiple shells but don't want to maintain it using different syntaxes.
+is a replacement for your shell's PS1.  It provides a number of facilities to
+reduce your displayed path and allows you to add various bits of information
+(e.g. current git or mercurial branch).
+.Pp
 The command-line options are as follows:
 .Bl -tag -width Ds
 .It Fl V
@@ -44,146 +40,13 @@ section
 .Nm ALIAS VARIABLES
 for more detailed information.
 .El
-.Sh REASONING
-Most shells read $PS1 differently and have a very rigid way to display the
-current working directory.
-.Nm
-allows you to have one way to handle the display of your working directory
-and use it across multiple shells. It also has awareness of a few version
-control system (git and mercurial) and will display the current branch
-when you enter a project under version control.
-.Pp
-The keywords available in the configuration are described in the sections
-below. Lines starting with '#' are ignored.
-.Sh ALIASES
-Defines a short name for a lengthy path, e.g.:
-.Bd -literal -offset indent
-alias *prwd /home/tamentis/projects/prwd
-.Ed
-.Pp
-If you are in "/home/tamentis/projects/prwd/doc/html/", prwd would
-return "*prwd/doc/html". If you have spaces in your directories, you can
-wrap your 'alias' parameters with double quotes:
-.Bd -literal -offset indent
-alias winDocs "/mnt/Windows XP/My Documents/"
-.Ed
-.Pp
-You can define multiple values for a single alias, this allows you to share
-your configuration on different machines, but keep the same alias, for
-example:
-.Bd -literal -offset indent
-alias $tp /home/tamentis/truveris/projects
-alias $tp /Users/tamentis/truveris/projects
-.Ed
-.Pp
-Aliases can be nested one level deep if you have a complicated directory
-hierarchy.
-.Bd -literal -offset indent
-alias $tp /home/tamentis/truveris/projects
-alias $constants $tp/pytruveris/truveris/constants/
-.Ed
-.Sh MAX LENGTH
-Defines the maximum length to return, the default filler string is "...",
-the default length is 32, a value of 0 will disable the feature all
-together.
-.Bd -literal -offset indent
-set maxlength 20
-.Ed
-.Pp
-This setting would turn "~/projects/prwd/doc/html" into a shorter string:
-"...cts/prwd/doc/html". You can define the filler string with the 'filler'
-variable:
-.Bd -literal -offset indent
-set filler "-"
-.Ed
-.Pp
-Or if your font/terminal/shell supports UTF:
-.Bd -literal -offset indent
-set filler "…"
-.Ed
-.Pp
-If you want
-.Nm
-to keep complete path elements instead of cutting as much
-as possible, you can use this setting:
-.Bd -literal -offset indent
-set cleancut on
-.Ed
-.Sh NEWSGROUP STYLE
-This will shorten the path by only displaying the first letter of each path
-components, toggle it with:
-.Bd -literal -offset indent
-set newsgroup on
-.Ed
-.Pp
-This will turn the "/home/tamentis/projects/prwd/src/nowhere" path into
-"/h/t/p/s/nowhere". Note that the newsgroup style filter is applied before
-the path is trimmed with 'maxlength'.
-.Sh MERCURIAL
-You can see the currently selected branch as a prefix to your path
-whenever you are in a mercurial repository, enable this feature with
-the following option:
-.Bd -literal -offset indent
-set mercurial on
-.Ed
-.Pp
-The resulting path will be "my-branch:project/folder".
-.Sh GIT
-You can see the currently HEAD position as a prefix to your path when you
-are in a git repository, you can enable this feature with the following
-option:
-.Bd -literal -offset indent
-set git on
-.Ed
-.Pp
-The resulting path will be "my-branch:project/folder" if you are located on
-the HEAD of a branch, it will be "59cefd9...:project/folder" if you are
-anywhere else.
-.Sh ALIAS VARIABLES
-Since you already define your aliases in your prwdrc file, you might want to
-use them in your shell without having to redefine them somewhere else. If you
-prefix your aliases with a '$' and add the following line to your .profile, you
-will be able to do exactlt that:
-.Bd -literal -offset indent
-eval `prwd -a`
-.Ed
-.Pp
-You can then use your aliases in your shell using the variable name, for
-example:
-.Bd -literal -offset indent
-cd $py3k
-.Ed
-.Sh PS1 REPLACEMENT
-The following options are pulled from much higher context and have nothing to
-do with your current path. They have been added to prwd because they are simple
-to implement and make the handling of both hostname and uid indication more
-streamlined. This one will prefix everything with the short hostname:
-.Bd -literal -offset indent
-set hostname on
-.Ed
-.Pp
-The result will look like "myhostname:project/folder". Combined with the
-following:
-.Bd -literal -offset indent
-set uid_indicator on
-.Ed
-.Pp
-You will obtain something like "myhostname:project/folder$" which is as close
-as you could get to your typical default PS1 on your average shell.
 .Sh SETUP
-This will depend on your shell, but the following will usually do (ksh and
-bash):
+You'll need to place this line in your ~/.profile (your mileage may vary):
 .Bd -literal -offset indent
-export PS1='\\h:`prwd`\\$ '
-.Ed
-.Pp
-Note that the single quote matters since you want to keep the command
-within the variable as-is (unresolved). If you use both the hostname and
-uid_indicator options, you can simplify your PS1 even more:
-.Bd -literal -offset indent
-export PS1='`prwd` '
+export PS1='`prwd`'
 .Ed
 .Sh SEE ALSO
+.Xr prwdrc 5 ,
 .Xr pwd 1 ,
 .Xr csh 1 ,
 .Xr ksh 1 ,
@@ -192,11 +55,3 @@ export PS1='`prwd` '
 .Sh AUTHORS
 prwd was written by Bertrand Janin <b@janin.com> and is distributed under an
 ISC license (BSD compatible, OSI compatible).
-.Pp
-A bunch of utility functions are borrowed from OpenBSD and OpenSSH, both
-under ISC and BSD licenses, with copyrights from the following authors:
-.Pp
- Copyright (c) 2004 Ted Unangst and Todd Miller
- Copyright (c) 1998 Todd C. Miller <Todd.Miller@courtesan.com>
- Copyright (c) 2000 Markus Friedl.  All rights reserved.
- Copyright (c) 2005,2006 Damien Miller.  All rights reserved.
